Implement Wayland support
Implement the wlr_gamma_control_unstable_v1 protocol.
The Wayland backend is prioritized over randr since it will fail in
an X11 context anyway (but the randr backend would not fail in a Wayland
context with xwayland support).
The gamma setting is reset when the client disconnects, thus the
behavior for oneshot mode blocks, like for Quartz.

Co-Authored-By: Giulio Camuffo <giuliocamuffo@gmail.com>
Co-Authored-By: Thomas Weißschuh <thomas@t-8ch.de>
Co-Authored-By: Marek Otahal <markotahal@gmail.com>
Co-Authored-By: Dominique Martinet <asmadeus@codewreck.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
   include:
     - os: linux
       compiler: gcc
-      dist: trusty
+      dist: xenial
       sudo: false
 
 addons:
@@ -21,6 +21,8 @@ addons:
       # VidMode
       - libx11-dev
       - libxxf86vm-dev
+      # Wayland
+      - libwayland-dev
       # GeoClue2
       - libglib2.0-dev
       # GUI
@@ -30,7 +32,7 @@ install:
   - ./bootstrap
   - mkdir "$TRAVIS_BUILD_DIR/root"
   - |
-    ./configure --prefix="$TRAVIS_BUILD_DIR/root" --enable-drm --enable-vidmode --enable-randr --enable-geoclue2 --enable-gui --enable-apparmor
+    ./configure --prefix="$TRAVIS_BUILD_DIR/root" --enable-drm --enable-vidmode --enable-randr --enable-geoclue2 --enable-gui --enable-apparmor --with-systemduserunitdir=no
   - make -j2 install
   - make -j2 distcheck
 
