--- a/data/apparmor/usr.bin.redshift.in
+++ b/data/apparmor/usr.bin.redshift.in
@@ -1,24 +1,9 @@
-# ------------------------------------------------------------------
-#
-#    Copyright (C) 2015 Cameron Norman <camerontnorman@gmail.com>
-#
-#    This program is free software: you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License as published by
-#    the Free Software Foundation, either version 3 of the License, or
-#    (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License
-#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-# ------------------------------------------------------------------
+# SPDX-License-Identifier: 0BSD
+# Copyright (C) 2015-2020 Cameron Nemo <cnemo@tutanota.com>
 
 #include <tunables/global>
-@bindir@/redshift {
+
+profile dk.jonls.redshift @bindir@/redshift {
   #include <abstractions/base>
   #include <abstractions/nameservice>
   #include <abstractions/dbus-strict>
@@ -35,8 +20,9 @@
   # Allow but log any other dbus activity
   audit dbus bus=system,
 
-  owner @{HOME}/.config/redshift/redshift.conf r,
+  owner @{HOME}/.config/{,redshift/}redshift.conf r,
+  owner /{,var/}run/user/[0-9]*/redshift-shared-* rw,
 
   # Site-specific additions and overrides. See local/README for details.
-  #include <local/usr.bin.redshift>
+  #include if exists <local/usr.bin.redshift>
 }
