--- a/data/applications/gammastep.desktop.in
+++ b/data/applications/gammastep.desktop.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0
-_Name=Redshift
+_Name=gammastep
 _GenericName=Color temperature adjustment
 _Comment=Color temperature adjustment tool
-Exec=redshift
-Icon=redshift
+Exec=gammastep
+Icon=gammastep
 Terminal=true
 Type=Application
 Categories=Utility;
