--- a/src/gammastep_indicator/defs.py.in
+++ b/src/gammastep_indicator/defs.py.in
@@ -6,9 +6,9 @@
 
 LOCALEDIR = '@localedir@'
 BINDIR = '@bindir@'
-COMMAND = 'redshift'
-ICON_PREFIX = 'redshift-'
-GETTEXT_PKGNAME = 'redshift'
-INDICATOR_NAME = 'redshift'
-STATUS_TOOLTIP = 'Redshift'
-DESKTOP_FILENAME = 'redshift-gtk.desktop'
+COMMAND = 'gammastep'
+ICON_PREFIX = 'gammastep-'
+GETTEXT_PKGNAME = 'gammastep'
+INDICATOR_NAME = 'gammastep'
+STATUS_TOOLTIP = 'gammastep'
+DESKTOP_FILENAME = 'gammastep-indicator.desktop'
