--- a/data/systemd/gammastep-indicator.service.in
+++ b/data/systemd/gammastep-indicator.service.in
@@ -1,5 +1,6 @@
 [Unit]
 Description=Indicator for display colour temperature adjustment
+PartOf=graphical-session.target
 After=graphical-session.target
 
 [Service]
