--- a/data/appdata/gammastep-indicator.appdata.xml.in
+++ b/data/appdata/gammastep-indicator.appdata.xml.in
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2014 Jon Lund Steffensen <jonlst@gmail.com> -->
-<component type="desktop">
- <id>gammastep-indicator.desktop</id>
+<application>
+ <id type="desktop">gammastep-indicator.desktop</id>
  <metadata_license>CC0</metadata_license>
  <project_license>GPL-3.0+</project_license>
- <name>Gammastep Indicator</name>
- <summary>Adjust display hue to outside lighting conditions</summary>
-
  <description>
    <_p>Adjusts the color temperature of your screen according to your surroundings. This may help your eyes hurt less if you are working in front of the screen at night.</_p>
    <_p>The color temperature is set according to the position of the sun. A different color temperature is set during night and daytime. During twilight and early morning, the color temperature transitions smoothly from night to daytime temperature to allow your eyes to slowly adapt.</_p>
    <_p>This program provides a status icon that allows the user to control color temperature.</_p>
  </description>
  <url type="homepage">https://gitlab.com/chinstrap/gammastep</url>
-</component>
+</application>
