fix(apparmor): add wayland abstraction to profile
The Wayland abstraction is not currently needed, but it may be needed in
the future.

--- a/data/apparmor/com.gitlab.chinstrap.gammastep.in
+++ b/data/apparmor/com.gitlab.chinstrap.gammastep.in
@@ -8,6 +8,7 @@ profile com.gitlab.chinstap.gammastep @bindir@/gammastep {
   #include <abstractions/nameservice>
   #include <abstractions/dbus-strict>
   #include <abstractions/X>
+  #include <abstractions/wayland>
 
   dbus send
        bus=system
